--- a/home.html
+++ b/home.html
@@ -45,6 +45,18 @@ var mouseoversound=createsoundbite("assets/scream.mp3")
 </script>
 </head>
 <body style="background-color:black;">
+<div style="position:absolute;left:30%">
+
+<p style="color:white">
+Notas que es el diario de mañana y llamas a tu co, a tu coordi para avisar, a todo el mundo. 
+</p>
+<p style="color:white">
+Estas en desesperación. Con mucho miedo agarras al oso, cuando escuchas un ruido.
+</p>
+<p style="color:white">
+Abajo del oso encontras una nota. Esta todo oscuro y no podes ver nada
+</p>
+</div>
 <div onmouseover="hoverscream()" style="color:white;position: absolute;
     top: 5%;
     left: 20%;
@@ -53,14 +65,26 @@ var mouseoversound=createsoundbite("assets/scream.mp3")
     top: 20%;
     left: 35%;"/>
 </div>
+
+<div id="formulario" style="visibility:hidden;position:absolute;top:90%;left:40%">
+<input type="text" id="codigotxt"></input>
+<button onclick="validar()">Validar</button>
+</div>
 <script>
 function hoverscream(){
 	mouseoversound.playclip();
 	document.getElementById("screamimage").style.visibility = "visible";
+	document.getElementById("formulario").style.visibility = "visible";
 }
 
 function leavescream(){
 	document.getElementById("screamimage").style.visibility = "hidden";
+}
+function validar(){
+debugger;
+	if(document.getElementById("codigotxt").value == "grpaiciaks"){
+		window.location.href="https://forms.gle/tdTQpz1MT66HSh1DA";
+	}
 }
 </script>
 </body>
